<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="online.hajamat.imfarhad.hajamat.activities.Welcome"
    tools:showIn="@layout/activity_welcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="top">
                <ImageView
                    android:id="@+id/icon"
                    style="@style/ThemeOverlay.FirebaseIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/desc_firebase_lockup"
                    android:src="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/title_bottom_margin"
                    android:text="@string/firebaseui_title_text"
                    android:theme="@style/ThemeOverlay.MyTitleText" />

                <TextView
                    android:id="@+id/status"
                    style="@style/ThemeOverlay.MyTextDetail"
                    android:text="@string/welcome_message" />

            </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey_300"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin">

            <Button
                android:layout_weight="2"
                android:id="@+id/sign_in_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:visibility="visible" />

            <Button
                android:layout_weight="2"
                android:id="@+id/sign_up_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:visibility="visible" />

        </LinearLayout>

      </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
